# docstructure

./: .gitignore  README.md  __init__.py  __main__.py  config.py  exceptions.py  pipeline.py  pyproject.toml  setup.py
benchmarks/: generate.py  run.py
classifier/: headings.py  paragraph.py  sections.py
core/: __init__.py  analysis.py  common.py  document.py  nodes.py
docs/: docstructure.md
docs/changelogs/: 2026-07-04-docstructure-v0-2-0-stabilization-and-release.md  2026-07-04-phase-2-format-detection-validation-acewriter-cleanup.md
docs/plans/: docgraph-document-structure-engine.md  docstructure-architecture-v2.md  docstructure-document-structure-engine.md  docstructure-phase2-format-detection.md  docstructure-v020-release-cleanup.md  docstructure-v020-release.md  document-intelligence-engine.md  index.md
features/: __init__.py
formats/: __init__.py  apa.py  base.py  ieee.py  mla.py
graph/: resolver.py
normalizer/: normalize.py
output/: json.py
output/schema/: v1.json  v2.json
parser/: base.py  docx.py
tests/: generate_stress_docs.py  golden_test.py  test_formats.py  test_package.py  test_stress.py  test_validation.py
tests/golden/: apa_paper.json  business_report.json  resume.json  sample.json  samplelong.json
validate/: base.py
validate/rules/: __init__.py  apa_rules.py  ieee_rules.py  mla_rules.py
