[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docstructure"
dynamic = ["version"]
description = "Document structure analysis engine — parse, classify, detect formats, validate"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1",
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

[tool.setuptools.dynamic]
version = {attr = "docstructure._version.__version__"}

[project.urls]
Homepage = "https://github.com/anomalyco/tools"
Documentation = "https://github.com/anomalyco/tools/tree/main/docstructure"
